--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react-navigation": "^3.4.0",
     "axios": "^1.6.7",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-async-storage": "^0.0.1",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-permissions": "^4.1.2",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
